<resources>
    <string name="app_name">pizza-mania-app</string>
    <string name="app_logo">App Logo</string>
    <string name="pizza_mania">Pizza Mania</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don’t have an account? Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="title_activity_ongoing_order_maps">ongoingOrderMaps</string>
    <string name="title_activity_order_details_maps">orderDetailsMaps</string>
    <string name="saved_cards_icon">Saved Cards Icon</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="john_wick">John Wick</string>
    <string name="edit_details_icon">Edit Details Icon</string>
    <string name="edit_details">Edit Details</string>
    <string name="manage_addresses_icon">Manage Addresses Icon</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="default_branch_icon">Default Branch Icon</string>
    <string name="default_branch">Default Branch</string>
    <string name="confirm_your_order">Confirm Your Order</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="colombo_mount_lavinia_no_63">Colombo, Mount Lavinia, No 63</string>
    <string name="change">Change</string>
    <string name="confirm_branch">Confirm Branch</string>
    <string name="total_amount">Total Amount:</string>
    <string name="rs_5000">Rs. 5000</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="passwords">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="default_address">Default Address</string>
    <string name="sign_ups">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string-array name="order_types">
        <item>Delivery</item>
        <item>Pick-up</item>
    </string-array>

    <!-- Branch options for pickup -->
    <string-array name="branches">
        <item>Colombo</item>
        <item>Galle</item>
    </string-array>
</resources>