<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainWelcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza_mania"
        android:textColor="#FF5722"
        android:textSize="32sp"
        android:fontFamily="@font/beachday"
        android:layout_marginBottom="36dp" />

    <Button
        android:id="@+id/btnLoginWelcome"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/login"
        android:backgroundTint="#FF5722"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:stateListAnimator="@null" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/sign_up"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:stateListAnimator="@null" />


</LinearLayout>
